--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "menu.custom_screen_info.tooltip": "",
-  "menu.disconnect": "Disconnect󏾒\ue002",
-  "menu.game": "\ue000\ue001",
+  "menu.disconnect": "Disconnect󏾒\uff04",
+  "menu.game": "\uff00\uff01\uff02\uff03",
   "menu.server_links": "Server Links...",
   "menu.server_links.title": "Server Links"
 }
